<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.example.andrew.tictactoe.WelcomeActivity">


    <TextView
        android:id="@+id/instructionsID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/playerOneTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerOneText"
        android:textSize="18sp"
        android:layout_row="1"
        android:layout_column="0"/>

    <EditText
        android:id="@+id/player1InputID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/playerOneInput"
        android:inputType="text"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="right"
        />

    <TextView
        android:id="@+id/playerTwoTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/playerTwoText"
        android:textSize="18sp"
        android:layout_row="2"
        android:layout_column="0"/>

    <EditText
        android:id="@+id/player2InputID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/playerTwoInput"
        android:inputType="text"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="right"/>

    <Button
        android:id="@+id/playButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:onClick="onClick"
        android:text="@string/playButton" />

</GridLayout>
